--- a/config/default.toml
+++ b/config/default.toml
@@ -3,6 +3,7 @@
     port = 2525
     host = "0.0.0.0"
     servername = false # defaults to os.hostname
+    # localAddress = "1.2.3.4"
 
     [mx.tls]
         key = "config/tls-key.pem"
